# article-rss-proxy

./: .env.example  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-lock.txt  requirements.txt
.github/workflows/: arxiv_rss.yml
docs/: index.xml
examples/: arxiv_fetcher_example.py  combined_example.py  example.py  example_rss.xml  fetched_example_250501.jsonl  fetched_example_250515.jsonl  html_parser_example.py  rss_example_250514.xml  rss_example_250515.xml  rss_generator_example.py  translated_example_250514.jsonl  translated_example_250515.jsonl
src/: arxiv_fetcher.py  arxiv_html_parser.py  config.py  html_parser.py  llm_utils.py  main.py  rss_generator.py
